# home_work_web_9

./: load_data.py  main.py  pyproject.toml  scraper.py
